added third section banner

--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-    
+
+	<section class="third-highlight-wrapper"></section>
+			<div class="internal-wrapper">
+				<div class="title-wraper">
+					iPhone 11 
+				</div> 
+				<div class="description-wrapper">
+					Just the right amount of everything.
+				</div>
+				<div class="price-wrapper">
+					From $16.62/mo. or $399 with trade‑in.
+				</div>
+				<div class="links-wrapper">
+					<ul>
+						<li><a href="">Learn more</a></li>
+						<li><a href="">Buy</a></li>
+					</ul> 
+				</div>
+			</div>
+		</section>
     <section class="fifth-heghlight-wrapper"> 
 			<div class="left-side-wrapper">
 				<div class="top-logo-wrapper">
