--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -26,7 +26,25 @@
             Verizon. <a href="#"> Full terms apply</a>.
           </div>
         </div>
-
+</div>
+				<div class="footer-links-wrapper"> 
+					<div class="links-wrapper-1">
+						<h3>Shop and Learn</h3>
+						<ul>
+							<li><a href="#">Mac</a></li>
+							<li><a href="#">iPad</a></li>
+							<li><a href="#">iPhone</a></li>
+							<li><a href="#">Watch</a></li>
+							<li><a href="#">TV</a></li>
+							<li><a href="#">Music</a></li>
+							<li><a href="#">AirPods</a></li>
+							<li><a href="#">HomePod</a></li>
+							<li><a href="#">iPod touch</a></li>
+							<li><a href="#">Accessories</a></li>
+							<li><a href="#">Gift Cards</a></li>
+						</ul>
+					</div> 
+					<div 
 <body>
     
     
