--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -44,7 +44,23 @@
 							<li><a href="#">Gift Cards</a></li>
 						</ul>
 					</div> 
-					<div 
+					<div class="links-wrapper-2">
+						<h3>Services</h3>
+						<ul>
+							<li><a href="#">Apple Music</a></li>
+							<li><a href="#">Apple News+</a></li>
+							<li><a href="#">Apple TV+</a></li>
+							<li><a href="#">Apple Arcade</a></li>
+							<li><a href="#">Apple Card</a></li>
+							<li><a href="#">iCloud</a></li>
+						</ul>
+						<h3>Account</h3>
+						<ul>
+							<li><a href="#">Manage Your Apple ID</a></li>
+							<li><a href="#">Apple Store Account</a></li>
+							<li><a href="#">iCloud.com</a></li>
+						</ul>					
+					</div> 
 <body>
     
     
