--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -61,6 +61,22 @@
 							<li><a href="#">iCloud.com</a></li>
 						</ul>					
 					</div> 
+                    <div class="links-wrapper-3">
+						<h3>Apple Store</h3>
+						<ul>
+							<li><a href="#">Find a Store</a></li>
+							<li><a href="#">Genius Bar</a></li>
+							<li><a href="#">Today at Apple</a></li>
+							<li><a href="#">Apple Camp</a></li>
+							<li><a href="#">Field Trip</a></li>
+							<li><a href="#">Apple Store App</a></li>
+							<li><a href="#">Refurbished and Clearance</a></li>
+							<li><a href="#">Financing</a></li>
+							<li><a href="#">Apple Trade In</a></li>
+							<li><a href="#">Order Status</a></li>
+							<li><a href="#">Shopping Help</a></li>
+						</ul>
+					</div> 
 <body>
     
     
