Added the links-wrapper div

--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -77,6 +77,29 @@
 							<li><a href="#">Shopping Help</a></li>
 						</ul>
 					</div> 
+                    <div class="links-wrapper-4">
+						<h3>For Business</h3>
+						<ul>
+							<li><a href="#">Apple and Business</a></li>
+							<li><a href="#">Shop for Business</a></li>
+						</ul>		
+						<h3>For Education</h3>
+						<ul>
+							<li><a href="#">Apple and Education</a></li>
+							<li><a href="#">Shop for College</a></li>
+						</ul>
+						<h3>For Healthcare</h3>
+						<ul>
+							<li><a href="#">Manage Your Apple ID</a></li>
+							<li><a href="#">Apple Store Account</a></li>
+							<li><a href="#">iCloud.com</a></li>
+						</ul>	
+						<h3>For Government</h3>
+						<ul>
+							<li><a href="#">Apple and Education</a></li>
+							<li><a href="#">Shop for College</a></li>
+						</ul>
+					</div> 
 <body>
     
     
