--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -100,6 +100,27 @@
 							<li><a href="#">Shop for College</a></li>
 						</ul>
 					</div> 
+                    <div class="links-wrapper-5"></div>
+						<h3>Apple Values</h3>
+						<ul>
+							<li><a href="#">Find a Store</a></li>
+							<li><a href="#">Genius Bar</a></li>
+							<li><a href="#">Today at Apple</a></li>
+							<li><a href="#">Apple Camp</a></li>
+							<li><a href="#">Field Trip</a></li>
+							<li><a href="#">Apple Store App</a></li>
+						</ul>
+						<h3>About Apple</h3>
+						<ul>
+							<li><a href="#">Find a Store</a></li>
+							<li><a href="#">Genius Bar</a></li>
+							<li><a href="#">Today at Apple</a></li>
+							<li><a href="#">Apple Camp</a></li>
+							<li><a href="#">Field Trip</a></li>
+							<li><a href="#">Apple Store App</a></li>
+						</ul>						
+					</div> 
+				</div>
 <body>
     
     
