added my-apple-wrapper and copyright-wrapper divs

--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -121,6 +121,13 @@
 						</ul>						
 					</div> 
 				</div>
+                <div class="my-apple-wrapper"> 
+					More ways to shop: <a href="#">Find an Apple Store</a> or <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+				</div>
+				<div class="copyright-wrapper">
+					<div class="copyright">
+						Copyright © 2019 Apple Inc. All rights reserved.
+					</div>
 <body>
     
     
