--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -11,7 +11,7 @@
 
 	<section class="third-highlight-wrapper"></section>
 			<div class="internal-wrapper">
-				<div class="title-wraper">
+				<div class="title-wrapper">
 					iPhone 11 
 				</div> 
 				<div class="description-wrapper">
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 		</section>
-    <section class="fifth-heghlight-wrapper"> 
+    <section class="fifth-highlight-wrapper"> 
 			<div class="left-side-wrapper">
 				<div class="top-logo-wrapper">
 					<div class="logo-wrapper">
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 
-				<div class="description-wraper">
+				<div class="description-wrapper">
 					Magic like you have never heard.
 				</div>
 
