I just added comment to in my section

--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -83,10 +83,10 @@
 						<li><a href="">Learn more</a></li>
 						<li><a href="">Buy</a></li>
 					</ul> 
-					<!-- <li><a href="">Learn more</a></li> -- I just added comment to in my section>
+					<!-- <li><a href="">Learn more</a></li> -- I just added comment to in my section-->
 				</div>
 			</div>	
 		</section>
 
 </body>
-</html>
+</html> 
