--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<section class="third-highlight-wrapper"></section>
+	<section class="third-highlight-wrapper">
 			<div class="internal-wrapper">
 				<div class="title-wrapper">
 					iPhone 11 
@@ -26,6 +26,42 @@
 					</ul> 
 				</div>
 			</div>
+	</section>
+    	
+		<section class="fourth-heghlight-wrapper">
+			<div class="left-side-wrapper">
+				<div class="top-logo-wrapper">
+					<div class="logo-wrapper">
+						<img src="images/icons/watch-series5-logo.png">
+					</div>
+				</div>
+				<div class="description-wraper">
+					With the new Always-On Retina display.<br>
+					You’ve never seen a watch like this.
+				</div>
+				<div class="links-wrapper">
+					<ul>
+						<li><a href="">Learn more</a></li>
+						<li><a href="">Buy</a></li>
+					</ul> 
+				</div>
+			</div>
+			<div class="right-side-wrapper">
+				<div class="top-logo-wrapper">
+					<div class="logo-wrapper">
+						<img src="images/icons/apple-card-logo.png">
+					</div>
+				</div>
+				<div class="description-wraper">
+					Get 3% Daily Cash on purchases from Apple using Apple Card.
+				</div>
+				<div class="links-wrapper">
+					<ul>
+						<li><a href="">Learn more</a></li>
+						<li><a href="">Buy</a></li>
+					</ul> 
+				</div>
+			</div>	
 		</section>
     <section class="fifth-highlight-wrapper"> 
 			<div class="left-side-wrapper">
@@ -62,7 +98,7 @@
 				</div>
 			</div>	
 		</section>
-
+        
 
 		<section class="sixth-heghlight-wrapper"> 
 			<div class="left-side-wrapper">
