edited the images path in the html file

--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -67,12 +67,13 @@
 			<div class="left-side-wrapper">
 				<div class="top-logo-wrapper">
 					<div class="logo-wrapper">
-						<img src="images/icons/apple-tv-logo.png">
+
+                         <img src="images/icons/apple-tv-logo.png" alt="apple-tv-logo">
 					</div>
 				</div>
 
 				<div class="tvshow-logo-wraper">
-					<img src="images/icons/servant-logo.png">
+                     <img src="images/icons/servant-logo.png" alt="servant-logo">
 				</div>
 
 				<div class="watch-more-wrapper">
