editted the fifth class name to match the one in style.css

--- a/appleClone/index.html
+++ b/appleClone/index.html
@@ -63,7 +63,7 @@
 				</div>
 			</div>	
 		</section>
-    <section class="fifth-highlight-wrapper"> 
+    <section class="fifth-heghlight-wrapper"> 
 			<div class="left-side-wrapper">
 				<div class="top-logo-wrapper">
 					<div class="logo-wrapper">
